--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -1,4 +1,10 @@
+TEST_OBJS := $(addprefix test_, $(OBJS))
+OBJS = $(addprefix ../, $(OBJS))
+
 all :
 	echo $(OBJS)
+	cat $(OBJS)
+	echo $(TEST_OBJS)
+
 
 .PHONY : all
