--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -1,12 +1,23 @@
-TEST_EXES := $(addprefix test_, $(SRCS:.c=.exe))
-SRCS := $(addprefix ../, $(SRCS))
+TEST_OBJS := $(addprefix test_, $(SRCS:.c=.o))
+SRC_DIR = ..
 
-all :
-	echo $(TEST_EXES)
-	echo ${SRCS}
-	echo $(SRCS)
-	cat $(SRCS)
+CC = gcc
+CFLAGS = -g -fno-builtin -Wall -Wextra -Werror
+
+all : build_tests
+#	echo $(TEST_OBJS)
 
 .PHONY : all
 
+build_tests : $(TEST_OBJS) | cmocka
 
+.PHONY : tests
+
+cmocka :
+	
+
+test_%.o : test_%.c $(SRC_DIR)/%.c
+	$(CC) $(CFLAGS) $<
+	touch "$@"".stamp"
+
+run_tests : 
