calling tests works

--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -1,9 +1,15 @@
 SRC_DIR = ..
-TEST_OBJS := $(SRCS:.c=.test.o)
+TEST_SRCS :=
+TEST_SRCS += $(shell \
+	for i in $(SRCS:.c=.test.c); do\
+		if [ -f $$i ]; then srcs="$$srcs $$i"; fi;\
+	done; echo $$srcs;)
+TEST_OBJS := $(TEST_SRCS:.c=.o)
 BUILD_STAMPS := $(TEST_OBJS:.o=.o.stamp)
 
 CC = gcc
 CFLAGS = -fno-builtin -Wall -Wextra -Werror
+
 
 
 
@@ -12,15 +18,9 @@ test : list_tests build_tests run_tests
 
 
 
-.PHONY : list_tests
-list_tests :
-	@echo "list of test objects:"
-	@for i in $(TEST_OBJS); do\
-		if [ -f $$i ]; then echo $$i; fi;\
-	done
-	@echo "\n"
 
-
+############
+#BUILD TESTS
 
 .PHONY : build_tests
 build_tests : $(TEST_OBJS) | cmocka
@@ -30,21 +30,21 @@ cmocka :
 	
 
 %.test.o : %.test.c $(SRC_DIR)/%.c
-	$(CC) $(CFLAGS) \
+	@$(CC) $(CFLAGS) \
 		-D main=testee_main \
 		-include $(SRC_DIR)/$*.c \
 		-o $@ \
-		$<
-	touch $@.stamp
+		$<; touch $@.stamp
 
 
-.SECONDARY : $(SRCS:.c=.test.c)
-#.SECONDARY : %.test.c
 %.test.c :
-	cp no_test.c $@
-	touch $@
+	@:
 
 
+
+
+############
+#RUN TESTS :
 
 .PHONY : run_tests
 run_tests : test_execution.stamp
@@ -52,9 +52,22 @@ run_tests : test_execution.stamp
 
 test_execution.stamp : $(BUILD_STAMPS) 
 	@for i in $(basename $?); do\
-		./$$i;\
+		if [ -f $$i ]; then ./$$i; fi;\
 	done
 	touch test_execution.stamp
+
+
+$(BUILD_STAMPS) :
+	@:
+
+
+
+
+###############
+#MISCELLANEOUS:
+
+.PHONY : all
+all : clean test
 
 
 
@@ -66,5 +79,7 @@ clean :
 
 
 
-.PHONY : all
-all : clean test
+.PHONY : list_tests
+list_tests :
+	@echo "list of test sources:"
+	@echo $(TEST_SRCS)
