--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: c
 os: linux
+install:
+ - git clone https://github.com/clibs/cmocka.git cmocka_download
+ - mkdir cmocka_build
+ - cd cmocka_build
+ - cmake ../cmocka_download
+ - make
+ - make install
 script:
  - make #-p
  - make unit-tests
