--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
  - cd cmocka_build
  - cmake ../cmocka_download
  - make
- - make install
+ - sudo make install
 script:
  - make #-p
  - make unit-tests
