--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: linux
 install:
  - AAA=aaa
  - echo $AAA
- - exec .travis/install_cmocka.sh
+ - source .travis/install_cmocka.sh
 script:
  - make #-p
  - make unit-tests
