--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -32,9 +32,9 @@ build_tests : cmocka $(TEST_OBJS)
 .PHONY : cmocka
 cmocka : 
 	if $(CC) $(CFLAGS) boilerplate.c -o test.o; then\
-		$(MAKE) -C cmocka/;
+		$(MAKE) -C cmocka/;\
 	else\
-		rm test.o;
+		rm test.o;\
 	fi
 
 %.test.o : %.test.c $(SRC_DIR)/%.c
