--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -31,10 +31,11 @@ build_tests : cmocka $(TEST_OBJS)
 
 .PHONY : cmocka
 cmocka : 
-	if $(CC) $(CFLAGS) boilerplate.c -o test.o; then\
+	if $$($(CC) $(CFLAGS) boilerplate.c -o test.o); then\
 		$(MAKE) -C cmocka/;\
 	else\
 		rm test.o;\
+		echo "cmocka already installed"
 	fi
 
 %.test.o : %.test.c $(SRC_DIR)/%.c
