--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -31,7 +31,7 @@ build_tests : cmocka $(TEST_OBJS)
 
 .PHONY : cmocka
 cmocka : 
-	if $$($(CC) $(CFLAGS) boilerplate.c -o test.o); then\
+	if $(CC) $(CFLAGS) boilerplate.c -o test.o; then\
 		$(MAKE) -C cmocka/;\
 	else\
 		rm test.o;\
