--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: c
 os: linux
 install:
- - LD_LIBRARY_PATH=$(pwd)/libs
- - CPATH+="$LD_LIBRARY_PATH/include"
+ - INSTALL_HERE=$(pwd)/libs
+ - LIBRARY_PATH=$INSTALL_HERE/lib
+ - CPATH+="$INSTALL_HERE/include"
  - source .travis/install_cmocka.sh
 script:
  - make #-p
