--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
  - LIBRARY_PATH=$INSTALL_HERE/lib
  - CPATH+="$INSTALL_HERE/include"
  - source .travis/install_cmocka.sh
+ - echo "installed :"
+ - ls -R $INSTALL_HERE
 script:
  - make #-p
  - make unit-tests
