--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ os: linux
 install:
  - INSTALL_HERE=$(pwd)/libs
  - LIBRARY_PATH=$INSTALL_HERE/lib
- - CPATH+="$INSTALL_HERE/include"
+ - CPATH="$INSTALL_HERE/include"
  - source .travis/install_cmocka.sh
  - echo "installed :"
  - ls -R $INSTALL_HERE
 script:
+ - ls $CPATH
+ - ls $LIBRARY_PATH
  - make #-p
  - make unit-tests
