--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -31,6 +31,8 @@ build_tests : cmocka $(TEST_OBJS)
 
 .PHONY : cmocka
 cmocka : 
+	ls $(CPATH)
+	ls $(LIBRARY_PATH)
 	if $(CC) $(CFLAGS) boilerplate.c -o test.o; then\
 		rm test.o;\
 		echo "cmocka already installed";\
