--- a/auxilliary/Makefile
+++ b/auxilliary/Makefile
@@ -1,6 +1,6 @@
 DEPTH = ..
 ifndef $(ROOT)
-	include $(DEPTH)/make_vars.mk	
+	include $(DEPTH)/Make_vars.mk	
 endif
 
 D = $(ROOT)/auxilliary
@@ -10,7 +10,7 @@ HERE_OBJS := $(patsubst %.c, %.o, $(wildcard $D/*.c))
 
 libaux.a : $(HERE_OBJS)
 	echo $(HERE_OBJS)
-	ar -rcs $(HERE_OBJS) -o 
+	ar -rcs $@ $(HERE_OBJS)
 	mv $@ $(LIB_DIR)
 	cp auxilliaries.h $(LIB_H_DIR)
 
