--- a/auxilliary/Makefile
+++ b/auxilliary/Makefile
@@ -6,7 +6,7 @@ endif
 D = $(ROOT)/auxilliary
 
 HERE_OBJS := $(patsubst %.c, %.o, $(wildcard $(D)/*.c))
-#HERE_OBJS := $(wildcard $(D)/*.c)
+HERE_OBJS := $(wildcard $(D)/*.c)
 
 
 libaux.a : $(HERE_OBJS)
