--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: c
 os: linux
+addons:
+ apt:
+  packages:
+   - libbsd-dev
 install:
  - INSTALL_HERE=$(pwd)/libs
  - LIBRARY_PATH=$INSTALL_HERE/lib
  - CPATH="$INSTALL_HERE/include"
  - source .travis/install_cmocka.sh
  - source .travis/install_libft.sh
-# - echo "installed :"
-# - ls -R $INSTALL_HERE
  - export CPATH
  - export LIBRARY_PATH
  - export LD_LIBRARY_PATH=$LIBRARY_PATH
+ - source .travis/install_42filechecker.sh
 script:
  - make -k #-p
  - make -k unit-tests
+ - make fillit
+ - ~/42FileChecker/42FileChecker.sh 
+   --project "fillit" 
+   --path "$(pwd)/fillit"; cat ~/42FileChecker/.my*
