--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
  - make -k #-p
  - make -k unit-tests
  - make clean_fillit && make -C clean_fillit/
- - sh ~/42FileChecker/42FileChecker.sh 
+ - bash ~/42FileChecker/42FileChecker.sh 
    --project "fillit" 
    --path "$(pwd)/clean_fillit"
    --no-norminette; cat ~/42FileChecker/.my*
