--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
  - make -k #-p
  - make -k unit-tests
  - make clean_fillit && make -C clean_fillit/
- - bash ~/fillit_checker/test.sh
+ - cd clean_fillit/ && bash ~/fillit_checker/test.sh .
 # - bash ~/42FileChecker/42FileChecker.sh 
 #   --project "fillit" 
 #   --path "$(pwd)/clean_fillit"
