--- a/auxilliary/Makefile
+++ b/auxilliary/Makefile
@@ -11,8 +11,8 @@ HERE_OBJS := $(patsubst %.c, %.o, $(wildcard $(D)/*.c))
 libaux.a : $(HERE_OBJS)
 	echo $(HERE_OBJS)
 	ar -rcs $@ $(HERE_OBJS)
-	mv $@ $(LIB_DIR)
+	mv $@ $(LIB_OBJ_DIR)
 	cp $(D)/auxilliaries.h $(LIB_H_DIR)
 
 $D/%.o : $D/%.c
-	$(CC) $(CFLAGS) $(CINCLUDES) -c $< -o $@
+	$(CC) $(CFLAGS) -I $(LIB_H_DIR) -c $< -o $@
