--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,6 +1,6 @@
 ifndef ROOT
 	ROOT = ..
-	include $(ROOT)/Makefile
+	include $(ROOT)/Make_vars.mk
 endif
 
 libft:
@@ -9,8 +9,8 @@ libft:
 		-b the_lib\
 		--depth 1\
 		https://github.com/SullenQuinoaPlant/Libft.git\
-		$@/
-	$(MAKE) -C $@
-	cp $@/$@.h $(LIB_H_DIR)/
-	cp $@/$@.a $(LIB_OBJ_DIR)/
-	rm -rf ./$@
+		$(LIB_DIR)/$@/
+	$(MAKE) -C $(LIB_DIR)/$@
+	cp $(LIB_DIR)/$@/$@.h $(LIB_H_DIR)/
+	cp $(LIB_DIR)/$@/$@.a $(LIB_OBJ_DIR)/
+	rm -rf $(LIB_DIR)/$@
