--- a/unit-tests/Makefile
+++ b/unit-tests/Makefile
@@ -3,7 +3,6 @@ TEST_SRCS := $(wildcard *.test.c)
 TEST_OBJS := $(TEST_SRCS:.c=.o)
 
 CMOCKA_DIR := ./cmocka
-LIBLIBERTY_DIR := ./libliberty
 LIBS_DIR = ../libs/objects
 LIBS_H_DIR = ../libs/include
 
@@ -14,11 +13,10 @@ CFLAGS += $(CFLAGS_MORE)
 COMMON_SEARCH_PATHS =\
 		-I $(SRC_DIR)\
 		-L $(LIBS_DIR) -I $(LIBS_H_DIR)\
-		-L $(CMOCKA_DIR) -I $(CMOCKA_DIR)\
-#		-L $(LIBLIBERTY_DIR) -I$(LIBLIBERTY_DIR)
+		-L $(CMOCKA_DIR) -I $(CMOCKA_DIR)
 
 COMMON_LIBS =\
-		-laux -lfillit -lft -lcmocka #-liberty
+		-laux -lfillit -lft -lcmocka
 
 GCC_LD_OPTS =\
 		-Wl,-rpath=$(LIBS_DIR)\
@@ -52,16 +50,6 @@ cmocka :
 		echo "cmocka already installed";\
 	else\
 		$(MAKE) -C $(CMOCKA_DIR) >/dev/null;\
-	fi
-
-.PHONY : libliberty #could not find a way to get it short of installing gcc. and that's a mouthful for another day
-libliberty :
-	@if $(CC) $(CFLAGS) $(COMMON_SEARCH_PATHS)\
-		 test_libliberty.c -liberty -o test.o; then\
-		rm test.o;\
-		echo "libliberty already installed";\
-	else\
-		$(MAKE) -C $(LIBLIBERTY_DIR) >/dev/null;\
 	fi
 
 %.test.o : %.test.c $(SRC_DIR)/%.c $(CMOCKA_DIR)/my_macro_overlay.h
